prediction function done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # application.properties
-spring.datasource.url=jdbc:mysql://localhost:3306/currency_exchange_prediction
+spring.datasource.url=jdbc:mysql://localhost:3306/currency_exchange_prediction?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin123
 spring.jpa.show-sql=true
