--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
 			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
 			<version>3.0.1</version>
 		</dependency>
+
+		<!-- Weka library for machine learning -->
+		<dependency>
+			<groupId>nz.ac.waikato.cms.weka</groupId>
+			<artifactId>weka-dev</artifactId>
+			<version>3.9.5</version> <!-- Use the latest version -->
+		</dependency>
 		
 	</dependencies>
 
